force-app/main/default/objects/RecruitmentRequest__c/RecruitmentRequest__c.object-meta.xml
<CustomObject>
    <label>Recruitment Request</label>
    <nameField>
        <label>Recruitment Request</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruitment Request</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>