force-app/main/default/objects/RecruitmentRequest__c/fields/AdditionalRequirements__c.field-meta.xml
<CustomField>
    <fullName>AdditionalRequirements__c</fullName>
    <label>Additional Requirements</label>
    <length>50</length>
    <type>Text</type>
</CustomField>