force-app/main/default/objects/RecruitmentRequest__c/fields/Appointed_Interviewer_user__c.field-meta.xml
<CustomField>
    <fullName>Appointed_Interviewer_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointed Interviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recruitment_Request4</relationshipName>
    <type>Lookup</type>
</CustomField>