force-app/main/default/objects/RecruitmentRequest__c/fields/ApproverBOD__c.field-meta.xml
<CustomField>
    <fullName>ApproverBOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver (BOD)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recruitment_Request1</relationshipName>
    <type>Lookup</type>
</CustomField>