force-app/main/default/objects/RecruitmentRequest__c/fields/ApproverManager__c.field-meta.xml
<CustomField>
    <fullName>ApproverManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver (Manager)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recruitment_Request</relationshipName>
    <type>Lookup</type>
</CustomField>