force-app/main/default/objects/RecruitmentRequest__c/fields/CancelReason__c.field-meta.xml
<CustomField>
    <fullName>CancelReason__c</fullName>
    <label>Cancel Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>