force-app/main/default/objects/RecruitmentRequest__c/fields/CloseReason__c.field-meta.xml
<CustomField>
    <fullName>CloseReason__c</fullName>
    <label>Close Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>