force-app/main/default/objects/RecruitmentRequest__c/fields/JobDescription__c.field-meta.xml
<CustomField>
    <fullName>JobDescription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Description</label>
    <referenceTo>JobDescription__c</referenceTo>
    <relationshipName>Staff_Request</relationshipName>
    <type>Lookup</type>
</CustomField>