force-app/main/default/objects/RecruitmentRequest__c/fields/JobOpening__c.field-meta.xml
<CustomField>
    <fullName>JobOpening__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Opening</label>
    <referenceTo>Jobopening__c</referenceTo>
    <relationshipName>Recruiting_Request</relationshipName>
    <type>Lookup</type>
</CustomField>