force-app/main/default/objects/RecruitmentRequest__c/fields/NumberofClosingDays__c.field-meta.xml
<CustomField>
    <fullName>NumberofClosingDays__c</fullName>
    <formula>TODAY() -  ClosingDate__c</formula>
    <label>Number of Closing Days (For Flow)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>