force-app/main/default/objects/RecruitmentRequest__c/fields/NumberofCurrentApplications__c.field-meta.xml
<CustomField>
    <fullName>NumberofCurrentApplications__c</fullName>
    <label>Number of Current Applications</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>