force-app/main/default/objects/RecruitmentRequest__c/fields/ReasonsForRecruitment__c.field-meta.xml
<CustomField>
    <fullName>ReasonsForRecruitment__c</fullName>
    <label>Reasons for Recruitment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>