force-app/main/default/objects/RecruitmentRequest__c/fields/Recruitment_Request__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruitment Request</label>
    <referenceTo>RecruitmentRequest__c</referenceTo>
    <relationshipLabel>Recruitment Request</relationshipLabel>
    <relationshipName>Recruitment_Request</relationshipName>
    <type>Lookup</type>
</CustomField>