force-app/main/default/objects/RecruitmentRequest__c/fields/RecruitmentPlanLine__c.field-meta.xml
<CustomField>
    <fullName>RecruitmentPlanLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruitment Plan Line</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RecruitmentPlanLine__c.RecruitmentPlan__c</field>
            <operation>equals</operation>
            <valueField>$Source.RecruitmentPlan__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RecruitmentPlanLine__c</referenceTo>
    <relationshipLabel>Recruitment Request</relationshipLabel>
    <relationshipName>Recruitment_Request</relationshipName>
    <type>Lookup</type>
</CustomField>