force-app/main/default/objects/RecruitmentRequest__c/fields/Reporttouser__c.field-meta.xml
<CustomField>
    <fullName>Reporttouser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Report to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recruitment_Request3</relationshipName>
    <type>Lookup</type>
</CustomField>