force-app/main/default/objects/RecruitmentRequest__c/validationRules/Lockrecord.validationRule-meta.xml
<ValidationRule>
    <fullName>Lockrecord</fullName>
    <active>true</active>
    <errorConditionFormula>AND (Lock__c = TRUE,
OR (Ischanged(RecruitmentPlan__c),
Ischanged(Recruitment_Request__c),
Ischanged(RecruitmentPlanLine__c),
Ischanged(Reporttouser__c),
Ischanged(Position__c),
Ischanged(JobDescription__c),
Ischanged(Branch__c),
Ischanged(Status__c)))</errorConditionFormula>
    <errorMessage>The record is locked. You cannot edit this record.</errorMessage>
</ValidationRule>