force-app/main/default/objects/RecruitmentRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>JobDescription__c</columns>
    <columns>Position__c</columns>
    <columns>Status__c</columns>
    <columns>Quantity__c</columns>
    <columns>ReasonsForRecruitment__c</columns>
    <columns>ClosingDate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>